testdata/baselines/reference/compiler/quantifiedTypesConstraints.errors.txt
quantifiedTypesConstraints.ts(4,3): error TS2345: Argument of type '{ values: string[]; identifier: (v: object) => object; }' is not assignable to parameter of type 'Input<object>'.
  Types of property 'values' are incompatible.
    Type 'string[]' is not assignable to type 'object[]'.
      Type 'string' is not assignable to type 'object'.


==== quantifiedTypesConstraints.ts (1 errors) ====
    type Input<T> = { values: T[], identifier: (value: T) => string }
    declare const f: (t: <T extends object> Input<T>) => void
    
    f({
      ~
      values: ["a", "b", "c"],
    ~~~~~~~~~~~~~~~~~~~~~~~~~~
      identifier: v => v
    ~~~~~~~~~~~~~~~~~~~~
    })
    ~
!!! error TS2345: Argument of type '{ values: string[]; identifier: (v: object) => object; }' is not assignable to parameter of type 'Input<object>'.
!!! error TS2345:   Types of property 'values' are incompatible.
!!! error TS2345:     Type 'string[]' is not assignable to type 'object[]'.
!!! error TS2345:       Type 'string' is not assignable to type 'object'.